--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="nul">null</string>
     <string name="title_activity_group">GroupActivity</string>
     <string name="facebook_app_id">1579642739001091</string>
+    <string name="title_activity_basic">BasicActivity</string>
 </resources>
